# psionic_local

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/psionic-backend-cuda/: Cargo.toml
crates/psionic-backend-cuda/src/: lib.rs
crates/psionic-compiler/: Cargo.toml
crates/psionic-compiler/examples/: tassadar_article_frontend_compiler_envelope_manifest.rs  tassadar_internal_compute_package_manager_report.rs  tassadar_module_catalog_report.rs  tassadar_universal_machine_encoding_report.rs
crates/psionic-compiler/src/: lib.rs  tassadar_article_abi.rs  tassadar_article_frontend_compiler_envelope.rs  tassadar_component_linking_profile.rs  tassadar_exception_profile.rs  tassadar_float_semantics.rs  tassadar_generalized_abi.rs  tassadar_internal_component_abi.rs  tassadar_internal_compute_package_manager.rs  tassadar_locality_scratchpad.rs  tassadar_memory64_profile.rs  tassadar_module_catalog.rs  tassadar_structured_control.rs  tassadar_symbolic.rs  tassadar_trap_exception.rs  tassadar_universal_machine_encoding.rs  tassadar_wasm_module.rs
crates/psionic-eval/: Cargo.toml
crates/psionic-eval/examples/: compiled_agent_module_eval_report.rs  tassadar_approximate_attention_closure_matrix.rs  tassadar_architecture_bakeoff_report.rs  tassadar_article_abi_closure_report.rs  tassadar_article_cpu_reproducibility_report.rs  tassadar_article_equivalence_claim_checker_report.rs  tassadar_article_equivalence_final_audit_report.rs  tassadar_article_evaluation_independence_audit_report.rs  tassadar_article_fast_route_exactness_report.rs  tassadar_article_fast_route_implementation_report.rs  tassadar_article_frontend_compiler_envelope_report.rs  tassadar_article_interpreter_breadth_envelope_report.rs  tassadar_article_interpreter_ownership_gate_report.rs  tassadar_article_single_run_no_spill_closure_report.rs  tassadar_article_transformer_artifact_descriptor_report.rs  tassadar_article_transformer_generalization_gate_report.rs  tassadar_article_transformer_training_closure_report.rs  tassadar_article_transformer_weight_production_report.rs  tassadar_async_lifecycle_profile_report.rs  tassadar_broad_internal_compute_acceptance_gate.rs  tassadar_broad_internal_compute_portability_report.rs  tassadar_broad_internal_compute_profile_publication_report.rs  tassadar_canonical_transformer_stack_boundary_report.rs  tassadar_component_linking_profile_report.rs  tassadar_cost_per_correct_job_report.rs  tassadar_counterfactual_route_quality_eval_report.rs  tassadar_decode_scaling_report.rs  tassadar_effect_safe_resume_report.rs  tassadar_effect_taxonomy_report.rs  tassadar_effective_unbounded_compute_claim_report.rs  tassadar_efficient_attention_baseline_matrix.rs  tassadar_error_regime_catalog.rs  tassadar_exception_profile_report.rs  tassadar_existing_substrate_inventory_report.rs  tassadar_float_profile_acceptance_gate_report.rs  tassadar_float_semantics_comparison_matrix_report.rs  tassadar_full_core_wasm_public_acceptance_gate_report.rs  tassadar_hybrid_process_controller_report.rs  tassadar_installed_module_evidence_report.rs  tassadar_internal_component_abi_report.rs  (+49 more)
crates/psionic-eval/src/: apple_adapter.rs  apple_adapter_benchmark.rs  attnres.rs  compiled_agent_eval.rs  compiled_agent_grounded_model.rs  compiled_agent_module_eval.rs  compiled_agent_route_model.rs  full.rs  parameter_golf_benchmark.rs  parameter_golf_distributed.rs  parameter_golf_training.rs  parameter_golf_windowed_validation.rs  tassadar.rs  tassadar_approximate_attention_closure_matrix.rs  tassadar_architecture_bakeoff.rs  tassadar_article_abi.rs  tassadar_article_cpu_reproducibility.rs  tassadar_article_cross_machine_reproducibility_matrix.rs  tassadar_article_demo_benchmark_equivalence_gate.rs  tassadar_article_demo_frontend_parity.rs  tassadar_article_equivalence_acceptance_gate.rs  tassadar_article_equivalence_blocker_matrix.rs  tassadar_article_equivalence_claim_checker.rs  tassadar_article_equivalence_final_audit.rs  tassadar_article_evaluation_independence_audit.rs  tassadar_article_fast_route_architecture_selection.rs  tassadar_article_fast_route_exactness.rs  tassadar_article_fast_route_implementation.rs  tassadar_article_fast_route_throughput_floor.rs  tassadar_article_fixture_transformer_parity.rs  tassadar_article_frontend_compiler_envelope.rs  tassadar_article_frontend_corpus_compile_matrix.rs  tassadar_article_hard_sudoku_benchmark_closure.rs  tassadar_article_hungarian_demo_parity.rs  tassadar_article_interpreter_breadth_envelope.rs  tassadar_article_interpreter_breadth_suite_gate.rs  tassadar_article_interpreter_ownership_gate.rs  tassadar_article_kv_activation_discipline_audit.rs  tassadar_article_representation_invariance_gate.rs  tassadar_article_route_minimality_audit.rs  (+94 more)
crates/psionic-mlx-capi/: Cargo.toml
crates/psionic-mlx-capi/include/: psionic_mlx_capi.h
crates/psionic-mlx-capi/src/: lib.rs
crates/psionic-mlx-catalog/: Cargo.toml
crates/psionic-mlx-catalog/src/: lib.rs
crates/psionic-mlx-compat/: Cargo.toml
crates/psionic-mlx-compat/src/: lib.rs
crates/psionic-mlx-recipes/: Cargo.toml
crates/psionic-mlx-recipes/src/: lib.rs
crates/psionic-mlx-serve/: Cargo.toml
crates/psionic-mlx-serve/src/: lib.rs
crates/psionic-mlx-vlm/: Cargo.toml
crates/psionic-mlx-vlm/src/: lib.rs
crates/psionic-mlx-workflows/: Cargo.toml
crates/psionic-mlx-workflows/src/: lib.rs
crates/psionic-nn-optimizers/: Cargo.toml
crates/psionic-nn-optimizers/src/: lib.rs
crates/psionic-research/: Cargo.toml
crates/psionic-research/examples/: attnres_residual_comparison.rs  parameter_golf_architecture_experiment_queue_report.rs  parameter_golf_restricted_attention_report.rs  tassadar_acceptance_report.rs  tassadar_approximate_attention_closure_summary.rs  tassadar_architecture_bakeoff_summary.rs  tassadar_article_cpu_reproducibility_summary.rs  tassadar_article_equivalence_final_audit_summary.rs  tassadar_article_evaluation_independence_summary.rs  tassadar_article_fast_route_exactness_summary.rs  (+58 more)
crates/psionic-router/: Cargo.toml
crates/psionic-transformer/: Cargo.toml
(+2115 files in other folders)
