[package]
name = "psionic-backend-cuda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "CUDA backend architecture and truthful readiness surface for Psionic"
build = "build.rs"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
half = "2.4.1"
libloading = "0.8.9"
rayon = "1.10"
psionic-compiler = { path = "../psionic-compiler" }
psionic-core = { path = "../psionic-core" }
psionic-ir = { path = "../psionic-ir" }
psionic-runtime = { path = "../psionic-runtime" }

[dev-dependencies]
psionic-backend-cpu = { path = "../psionic-backend-cpu" }

[build-dependencies]
cc = "1.1"
