[package]
name = "psionic-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Lowering and scheduling interfaces for Psionic"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hex = { workspace = true }
psionic-core = { path = "../psionic-core" }
psionic-ir = { path = "../psionic-ir" }
psionic-runtime = { path = "../psionic-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
wasm-encoder = "0.244.0"
wasmparser = "0.244.0"
wat = "1"

[dev-dependencies]
tempfile = "3"
