[package]
name = "psionic-eval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Rust-native evaluation, rubric, and benchmark runtime contracts for Psionic"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["full"]
full = [
    "dep:psionic-adapters",
    "dep:psionic-apple-fm",
    "dep:psionic-compiler",
    "dep:psionic-data",
    "dep:psionic-datastream",
    "dep:psionic-environments",
    "dep:psionic-ir",
    "dep:psionic-models",
    "dep:psionic-runtime",
]

[dependencies]
hex = { workspace = true }
psionic-adapters = { path = "../psionic-adapters", optional = true }
psionic-apple-fm = { path = "../psionic-apple-fm", optional = true }
psionic-compiler = { path = "../psionic-compiler", optional = true }
psionic-data = { path = "../psionic-data", optional = true }
psionic-datastream = { path = "../psionic-datastream", optional = true }
psionic-environments = { path = "../psionic-environments", optional = true }
psionic-ir = { path = "../psionic-ir", optional = true }
psionic-models = { path = "../psionic-models", optional = true }
psionic-runtime = { path = "../psionic-runtime", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
