[package]
name = "psionic-mlx-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Bounded MLX-style model catalog and Hugging Face cache workflows above Psionic-native substrate"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hex = { workspace = true }
psionic-catalog = { path = "../psionic-catalog" }
psionic-mlx-lm = { path = "../psionic-mlx-lm" }
psionic-models = { path = "../psionic-models" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
