[package]
name = "psionic-mlx-recipes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Bounded MLX-style training recipe layer above psionic-train"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
psionic-environments = { path = "../psionic-environments" }
psionic-train = { path = "../psionic-train" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
