[package]
name = "psionic-mlx-serve"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Bounded MLX-style text serving package above Psionic-native catalog and OpenAI-compatible server surfaces"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8"
psionic-mlx-catalog = { path = "../psionic-mlx-catalog" }
psionic-models = { path = "../psionic-models" }
psionic-router = { path = "../psionic-router" }
psionic-runtime = { path = "../psionic-runtime" }
psionic-serve = { path = "../psionic-serve" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
