[package]
name = "psionic-mlx-vlm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Bounded MLX-style multimodal package with processor registries and served-request planning above Psionic-native prompt and serving surfaces"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
psionic-models = { path = "../psionic-models" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
