[package]
name = "psionic-mlx-workflows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Bounded MLX-style synthetic-data, supervision-helper, adapter-merge, and publish workflows above psionic-data and psionic-train"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
psionic-core = { path = "../psionic-core" }
psionic-data = { path = "../psionic-data" }
psionic-datastream = { path = "../psionic-datastream" }
psionic-environments = { path = "../psionic-environments" }
psionic-mlx-recipes = { path = "../psionic-mlx-recipes" }
psionic-train = { path = "../psionic-train" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
