[package]
name = "psionic-nn-optimizers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Optimizer orchestration above psionic-nn modules and psionic-train math"

[lints]
workspace = true

[dependencies]
hex = { workspace = true }
psionic-core = { path = "../psionic-core" }
psionic-nn = { path = "../psionic-nn" }
psionic-train = { path = "../psionic-train" }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
