[package]
name = "psionic-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
description = "Multi-model routing and policy contracts for Psionic"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hex = { workspace = true }
psionic-compiler = { path = "../psionic-compiler" }
psionic-environments = { path = "../psionic-environments" }
psionic-ir = { path = "../psionic-ir" }
psionic-models = { path = "../psionic-models" }
psionic-runtime = { path = "../psionic-runtime" }
psionic-sandbox = { path = "../psionic-sandbox" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
